交换分区归档设置

--- a/Mysql/高性能可扩展Mysql笔记/7.MYSQL分区表使用.md
+++ b/Mysql/高性能可扩展Mysql笔记/7.MYSQL分区表使用.md
@@ -75,7 +75,7 @@ ALTER TABLE customer_login_log ADD PARTITION (PARTITION p4 VALUES LESS TTHAN(201
 ALTER TABLE customer_login_log DRON PARTITION p0;
 ```
 
-#### 9. Mysql分区归档
+#### 9. Mysql5.7交换分区归档
 Mysql >= 5.7 以上版本对分区归档数据非常方便,创建归档表，使用交换分区概念对指定分区进行归档
 ![分区表](./images/mysqlfenqu9.png)
 - Mysql版本大于5.7
