--- a/Mysql/高性能可扩展Mysql笔记/12.MYSQL数据库备份l.md
+++ b/Mysql/高性能可扩展Mysql笔记/12.MYSQL数据库备份l.md
@@ -1,6 +1,6 @@
 # MYSQL数据库备份
 - 对于任何数据库来说，备份都是非常重要的
-- 数据库的主从同步并不能取代数据库的备份功能（主从的延时可能会导致数据缺失）
+- 数据库的主从同步并不能取代数据库的备份功能（当出现故障时主从的延时可能会导致数据缺失）
 
 #### 1 逻辑备份和物理备份
 - 逻辑备份的结果为sql语句，适合于所有存储引擎，逻辑备份花费的时间较长（mysqldump就属于逻辑备份）
@@ -15,7 +15,8 @@
 > xtrabackup 提供增量备份功能，对INNODB更加安全和高效
 > 通过对mysql的binlog二进制日志来进行增量备份（无论使用什么工具备份，在恢复时需要使用恢复时间点的二进制日志，所以二进制日志的备份都要做）
 
-#### 3 mysqldump 官方工具备份
+#### 3 mysqldump 官方工具备份（逻辑备份，在线热备，恢复时需要关闭数据库冷恢复）
++ 第一步： mysqldump 备份和常用参数解析
 ```sql
 mysqldump -h ip -u root -p db_name > mysqldump001.sql
 ```
@@ -35,10 +36,10 @@ mysqldump -h ip -u root -p db_name > mysqldump001.sql
 
 --hex-blob 字段类型 date,blog等类型数据存储为16进制格式存储
 --tab=path 会在指定路径下为数据库每个表生成两个文件 ，一个文件存储表结构哦，一个存储表数据
--w,--where="条件" 指定提交导出，但是只支持单表导出
+-w,--where="条件" 指定条件导出，但是只支持单表导出
 ```
 
-#### 4 mysqldump 备份实例
++ 第二步：  mysqldump 备份实例
 - 创建一个备份用户
 ```sql
 create user 'backup'@'localhost' identified by '123456';
@@ -56,7 +57,7 @@ grant select,file,reload,lock tables,replication client,show view,event,process 
 ![sql执行计划](./images/12-6.png)
 
 
-#### 5 恢复mysqldump备份的数据库文件
++ 第三步： 恢复mysqldump备份的数据库文件
 - 客户端恢复：`mysql -u -p dbname < /backupdir/backup.sql`
 - 进入命令行恢复：`mysql> source /backupdir/backup.sql`
 > 单线程恢复，速度和服务器的cpu和IO性能有关
@@ -66,7 +67,7 @@ grant select,file,reload,lock tables,replication client,show view,event,process 
 加载数据`mysql> load data infile '/backupdir/table_user_data.txt' into table table_user;`
 
 
-#### 6 指定时间点的恢复
+#### 4 Mysqldump工具 + Binlog 工具实现指定时间点的备份恢复
 需求： 恢复到误操作的时间
 先决条件：
 - 具有指点时间点前的一个全备
@@ -83,13 +84,99 @@ mysql -uroot -p db_name < /backupdir/allbackup.sql
 more /backupdir/allbackup.sql
 ```
 ![sql执行计划](./images/12-7.png)
-查看mysql二进制文件的日志目录查看所有二进制文件`cat /var/log/mysql/`
+进入mysql二进制文件的日志目录，查看所有二进制文件`cat /var/log/mysql/`
 ![sql执行计划](./images/12-8.png)
 `mysqlbinlog --base64-output=decode-rows -vv --start-position=84882 --database=mc_orderdb mysql-bin.000011 | grep -B DELETE | more`
 ![sql执行计划](./images/12-9.png)
 通过分析还需要恢复从全备份 84882 到 169348 之间的数据
 ```bash
+# 将全备的日志ID到误操作的日志ID的差异数据导出一个sql文件
 mysqlbinlog --start-position=84882 --stop-position=169348 --database=mc_orderdb mysql-bin.000011 > mc_order_diff.sql
-
+# 将sql文件导入到数据库
 mysql -uroot - p mc_orderdb < mc_order_diff.sql
+```
+
+#### 5 Binlog工具实时二进制日志备份
+```sql
+# 进入mysql命令行 创建备份二进制文件的账户 userbinlog
+> grant replication slave on *.* to 'userbinlog'@'localhost' identified by '123456';
+
+mysqlbinlog --rwa --read-from-remote-server --stop-nerver --host localhost --port 3306 -u userbinlog -p123456 mysql-bin.000011
+```
+
+#### 6 xtrabackup 备份工具（物理备份，在线热备，恢复时需要关闭数据库冷恢复）
+![sql执行计划](./images/12-10.png)
+
++ 第一步：安装依赖库
+```bash
+yum install -y perl-DBD-MySQL.X86 perl-DBl.x86 perl-Time-HiRes.x86_64 perl-IO-Socker-SSL.noarch perl-TermReadKey.x86_64
+```
++ 第二步：[xtrabackup下载地址](https://www.percona.com/downloads/XtraBackup/LATEST/) 
+```bash
+rpm -ivh percona-ctrabackup-24-2.4.4-1.el6.x86_64.rpm
+```
+![sql执行计划](./images/12-11.png)
++ 第三步：备份数据库
+```bash
+innobackupex --user=root --password=pwd --parallel=2 /home/db_backup/ --no-timestamp
+#参数解析：
+--parallel=2 指定备份是使用的线程数，并发备份 
+/home/db_backup/ 指定备份到的目录
+--no-timestamp 生成时不指定时间戳生成的目录
+```
++ 第四部：利用innobackupex 进行全备的恢复
+![sql执行计划](./images/12-12.png)
+>全备份后的目录: /home/db_backup/2019-04-02_10-30-30 , MYSQL使用中的数据库文件目录位置 : /mysql/data
+```
+# 导入最新数据到全备目录中
+innobackupex --apply-log /home/db_backup/2019-04-02_10-30-30
+
+# mysql实例的停止
+/etc/init.c/mysqld stop
+
+# 用备份目录替换数据库目录
+mv /mysql/data mv /mysql/data_bak
+mv /home/db_backup/2019-04-02_10-30-30 /mysql/data
+chown -R mysql:mysql /mysql/data
+
+# mysql实例的启动
+/etc/init.c/mysqld start
+```
++ 第五步：利用innobackupex 进行增量备份
+```bash
+# innobackupex 备份工具
+# --incremental-basedir 参数：指定增量备份的基础备份目录
+
+# 全备 备份后的目录为 /home/db_backup/2019-04-02_10-30-30
+innobackupex --user=root --password=pwd --incremental /home/db_backup/  
+# 第一次增量备份 增量备份目录为 /home/db_backup/2019-04-02_12-30-30
+innobackupex --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/2019-04-02_10-30-30
+# 第二次增量备份 增量备份目录为 /home/db_backup/2019-04-02_14-30-30
+innobackupex --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/2019-04-02_12-30-30
+```
++ 第六步： 利用innobackupex 进行增量备份的恢复
+![sql执行计划](./images/12-13.png)
+
+```bash
+# 将第一次增量备份导入到全备目录中
+innobackupex --apply-log --redo-only /home/db_backup/2019-04-02_10-30-30 --incremental-dir /home/db_backup/2019-04-02_12-30-30
+
+# 将第二次增量备份导入到全备目录中
+innobackupex --apply-log --redo-only /home/db_backup/2019-04-02_10-30-30 --incremental-dir /home/db_backup/2019-04-02_14-30-30
+
+# ........
+
+# 将所有的增量备份导入到全备中后，导入最新数据到全备目录中
+innobackupex --apply-log /home/db_backup/2019-04-02_10-30-30
+
+# mysql实例的停止
+/etc/init.c/mysqld stop
+
+# 用备份目录替换数据库目录
+mv /mysql/data mv /mysql/data_bak
+mv /home/db_backup/2019-04-02_10-30-30 /mysql/data
+chown -R mysql:mysql /mysql/data
+
+# mysql实例的启动
+/etc/init.c/mysqld start
 ```
