更新docker常用命令和加速器链接

--- a/Docker/0.Docker常用命令.md
+++ b/Docker/0.Docker常用命令.md
@@ -1,4 +1,6 @@
 ### [常用命令参考网址](http://www.runoob.com/docker/docker-command-manual.html)(http://www.runoob.com/docker/docker-command-manual.html)
+![Docker](./images/0-1.png)
+
 #### 容器生命周期管理
 `run` docker run ：创建一个新的容器并运行一个命令
 
