--- a/Docker/2.Docker安装.md
+++ b/Docker/2.Docker安装.md
@@ -33,8 +33,9 @@ $ sudo docker run hello-world
  - 镜像从哪里来？[官方公共镜像库](https://hub.docker.com/explore)
 		Docker Hub是由Docker公司负责维护的公共注册中心，包含大量的容器镜像，Docker工具默认从这个[公共镜像库](https://hub.docker.com/explore)下载镜像。
 
- - **默认是国外的源，下载会慢，可以国内的源提供下载加速：**
- `curl -sSL https://get.daocloud.io/daotools/set_mirror.sh | sh -s http://04be47cf.m.daocloud.io`
+ - **默认是国外的源，下载会慢，可以[国内的源提供下载加速](https://www.daocloud.io/mirror)：**
+
+ `curl -sSL https://get.daocloud.io/daotools/set_mirror.sh | sh -s http://f1361db2.m.daocloud.io`
 
 + 2.2镜像的工作原理
 ```html
