添加docker入门学习笔记

--- a/Docker/3.Docker网络.md
+++ b/Docker/3.Docker网络.md
@@ -62,3 +62,17 @@ $ docker inspect centos
 容器访问外网
 
 ![bridge 网络模式原理](./images/3-1.png)
+
+### 创建 docker 内部网络
+```bash
+# Docker 默认网段默认开头：172.17.0.0
+# 创建键一个内部网段
+docker network create --subnet=172.18.0.0/24 net1 
+--subnet 参数指定创建时的网段地址段，没有这个参数默：net1 网段 ，以：172.18.0.0开头，net2 网段 ，以：172.19.0.0开头，
+
+# 查看网段相关信息
+docker network inspect net1
+
+# 删除网段
+docker network rm net1
+```
