--- a/Docker/10.Docker私有仓库搭建.md
+++ b/Docker/10.Docker私有仓库搭建.md
@@ -1,6 +1,6 @@
 ## 搭建私有镜像仓库
 
-####下载官方私有仓库容器
+### 一.安装官方私有镜像仓库(字符界面)
 ```
 docker pull registry
 ```
@@ -49,6 +49,54 @@ docker run -d -v /opt/registry:/var/lib/registry -p 5000:5000 --restart=always -
 ```
 #curl http://192.168.1.120:5000/v2/_catalog
 ```
+
+### 二.安装私有镜像仓库Harbor(图形界面)
+##### 1 下载安装文件
+```bash
+# docker-composer 依赖安装
+curl -L https://github.com/docker/compose/releases/download/1.24.0-rc1/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose
+sudo chmod +x /usr/bin/docker-compose
+
+# 下载运行脚本文件
+wget https://storage.googleapis.com/harbor-releases/release-1.7.0/harbor-offline-installer-v1.7.5.tgz
+
+# 解压后在当前目录下会生成一个 harbor的目录，里面放的就是私有镜像仓库的启动文件
+tar -xvf harbor-offline-installer-v1.7.5.tgz
+```
+
+##### 2 修改harbor配置并启动
+```bash
+# 进入harbor目录修改相关配置文件
+cd harbor
+vim harbor.cfg
+hostname = dockerhub.xxx.com:8080 # 给仓库配置一个域名，并绑定一个端口进行访问
+ 
+# 修改绑定的端口
+vim docker-compose.yml
+ports:
+  - 8080:80
+
+# 执行安装脚本
+./install.sh
+
+# 出现下面的信息表示安装成功，可以访问了http://dockerhub.xxx.com:8080.
+✔ ----Harbor has been installed and started successfully.----
+
+Now you should be able to visit the admin portal at http://dockerhub.xxx.com:8080. 
+For more details, please visit https://github.com/goharbor/harbor .
+```
+[点击查看docker-compose.yml配置文件示例](./source/docker-compose.yml) | [点击查看harbor.cfg配置文件示例](./source/harbor.cfg)
+> 注意：安装时要使用很多系统目录挂载，如果希望指定目录挂载的位置可以通过修改配置文件实现。具体可以查看上面的配置文件示例。（MAC系统的电脑因为有目录权限限制，所有要县修改指定的挂载目录位置）
+
+##### 3 登录harbor
+```bash
+#浏览器登录 http://dockerhub.xxx.com:8080
+# 默认登录账户和密码(可以在harbor.cfg配置中查看，正式环境记得登录后修改默认密码)
+admin
+Harbor12345
+```
+> Harbor 的界面简洁，操作简单，支持多语言，支持用户权限限定，支持打标签，支持分布部署和同步等。具体使用可以自己摸索，整个使用比较简单，这里就不再过多的介绍。
+
 ### Docker Hub公共镜像仓库使用
 #### 1、注册账号
 https://hub.docker.com
