优化私有镜像仓库搭建的流程说明

--- a/Docker/10.Docker私有仓库搭建.md
+++ b/Docker/10.Docker私有仓库搭建.md
@@ -51,7 +51,12 @@ docker run -d -v /opt/registry:/var/lib/registry -p 5000:5000 --restart=always -
 ```
 
 ### 二.安装私有镜像仓库Harbor(图形界面)
+环境说明：
+虚拟机Harbor：192.168.1.10 开 8080 端口 安装Harbor服务
+虚拟机test：192.168.1.11 用作私有镜像推送的测试服务器
+两台虚拟机需要提前都安装好docker服务，没有这里不再介绍docker服务的安装
 ##### 1 下载安装文件
+进入虚拟机Harbor: 192.168.1.10
 ```bash
 # docker-composer 依赖安装
 curl -L https://github.com/docker/compose/releases/download/1.24.0-rc1/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose
@@ -86,18 +91,79 @@ Now you should be able to visit the admin portal at http://dockerhub.xxx.com:808
 For more details, please visit https://github.com/goharbor/harbor .
 ```
 [点击查看docker-compose.yml配置文件示例](./source/docker-compose.yml) | [点击查看harbor.cfg配置文件示例](./source/harbor.cfg)
-> 注意：安装时要使用很多系统目录挂载，如果希望指定目录挂载的位置可以通过修改配置文件实现。具体可以查看上面的配置文件示例。（MAC系统的电脑因为有目录权限限制，所有要县修改指定的挂载目录位置）
+> 注意：安装时要使用很多系统目录挂载，如果希望指定目录挂载的位置可以通过修改配置文件实现。具体可以查看上面的配置文件示例。（MAC系统的电脑因为有目录权限限制，因此要先去修改指定的挂载目录位置）
 
-##### 3 登录harbor
+##### 3 通过浏览器登录并管理Harbor
+- /etc/hosts域名绑定 
+>说明：因为我所有的服务都是在虚拟机安装和测试的，域名并没有在互联网解析，所以需要将域名绑定到虚拟机的IP 192.168.1.10，而虚拟机上的Harbor服务已经监听了0.0.0.0:8080。如果做了域名解析服务的可以忽略此步骤
 ```bash
-#浏览器登录 http://dockerhub.xxx.com:8080
+# 添加域名绑定后再进行访问
+192.168.1.10 dockerhub.xxx.com
+```
+- 浏览器登录 http://dockerhub.xxx.com:8080
+```bash
 # 默认登录账户和密码(可以在harbor.cfg配置中查看，正式环境记得登录后修改默认密码)
 admin
 Harbor12345
 ```
+![Dockerimages](./images/10-2.png)
+##### 4 在Harbor创建一个私有仓库，并添加用户权限
+- 创建`test`项目仓库，是否公开根据项目需要设置，具体查看i说明
+![Dockerimages](./images/10-3.png)
+- 创建一个管理用户`test`
+![Dockerimages](./images/10-1.png)
+- 给`test`项目添加添加一个项目成员`test`（姓名：需要在上一步先创建test用户这里才能填写，无法添加不存在的用户。角色：一般设置开发人员权限就够用了）
+![Dockerimages](./images/10-4.png)
+
+##### 5 推送镜像到私有仓库
+进入虚拟机test: 192.168.1.11
+- /etc/hosts域名绑定 
+>说明：因为我所有的服务都是在虚拟机安装和测试的，域名并没有在互联网解析，所以需要将域名绑定到虚拟机的IP 192.168.1.10，而虚拟机上的Harbor服务已经监听了0.0.0.0:8080。如果做了域名解析服务的可以忽略此步骤
+```bash
+# 添加域名绑定
+vim /etc/hosts
+192.168.1.10 dockerhub.xxx.com
+```
+
+- 推送镜像前的docker配置
+```bash
+# 因为没有HTTPS证书，使用的HTTP协议做的传输，需要在docker里面添加http信任
+# vi /etc/docker/daemon.json 
+{
+  "insecure-registries":["dockerhub.xxx.com:8080"]
+} 
+
+# 重启docker
+systemctl restart docker
+```
+
+- 登录到Harbor服务器
+```bash
+docker login dockerhub.xxx.com:8080
+Username: test
+Password: 
+WARNING! Your password will be stored unencrypted in /root/.docker/config.json.
+Configure a credential helper to remove this warning. See
+https://docs.docker.com/engine/reference/commandline/login/#credentials-store
+
+Login Succeeded
+```
+
+- 推送本地 nginx 镜像到私有仓库
+```bash
+# 在 192.168.1.11 里面已经存在了 nginx 镜像，通过 docker images 可以看到本地所有镜像
+# 本地给nginx镜像打一个标签 dockerhub.xxx.com:8080/test/nginx:latest
+docker tag nginx:latest dockerhub.xxx.com:8080/test/nginx:latest
+
+# 推送成功后生成一个验证码，这个通过浏览器在管理平台就可以看到推送的镜像了
+docker push dockerhub.xxx.com:8080/test/nginx:latest
+```
+![Dockerimages](./images/10-5.png)
+
 > Harbor 的界面简洁，操作简单，支持多语言，支持用户权限限定，支持打标签，支持分布部署和同步等。具体使用可以自己摸索，整个使用比较简单，这里就不再过多的介绍。
 
-### Docker Hub公共镜像仓库使用
+
+### 三. Docker Hub公共镜像仓库使用
 #### 1、注册账号
 https://hub.docker.com
 #### 2、登录Docker Hub
