--- a/Docker/2.Docker安装.md
+++ b/Docker/2.Docker安装.md
@@ -27,6 +27,12 @@ $ sudo systemctl start docker
 $ sudo docker run hello-world
 ```
 
+docker-composer 依赖安装
+```bash
+curl -L https://github.com/docker/compose/releases/download/1.24.0-rc1/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose
+sudo chmod +x /usr/bin/docker-compose
+```
+
 ### 2.Docker镜像（国内镜像源的下载加速）
 + 2.1镜像来源
  - 概念：简单说，Docker镜像是一个不包含Linux内核而又精简的Linux操作系统。
