提交PXC集群部署方案的文档说明和相关脚本优化

--- a/Mysql/PXC集群部署/docker/使用说明.md
+++ b/Mysql/PXC集群部署/docker/使用说明.md
@@ -1,9 +1,12 @@
 # 使用说明
 
-### 需要先下载当前 docker 目录中的文件到服务器，然后按照以下步骤操作
+### 1.使用前提
 - 使用前提是了解并基本掌握 docker 命令和相关基本操作，并能够排查容器是否正常启用。
-- 测试环境：centos7.6 8G内存 docker环境 20G硬盘 IP:192.168.1.15 网卡名称：ens33
+- 测试环境：centos7.6 / 8G内存 / docker环境 / 20G硬盘 / IP:192.168.1.15 网卡名称：ens33
 > 文档写的比较简单，步骤操作需注意测试每一步的服务是否正常开启，严格按照步骤操作，这里面的每一步都是经过反复测试可以正常启用的。
+
+### 2. 操作步骤
+- 先下载当前 docker 目录中的文件到服务器，然后按照以下步骤操作
 ```bash
 # 下载示例文件并进入安装目录
 cd docker/
@@ -61,7 +64,10 @@ ping 172.101.0.100
 #mysql 数据库地址为：172.101.0.100:3306
 ```
 
-### 以上步骤只是保证了PXC集群部署成功，真正想要访问，还需要将虚拟IP映射到宿主机上，使用实体机IP访问（或者docker把虚拟IP映射出去也是可以的）
+### 3. 对外提供访问
+>以上步骤只是保证了PXC集群部署成功，真正想要访问，还需要将虚拟IP映射到宿主机上，使用宿主机IP访问（或者docker把虚拟IP映射出去也是可以的）
+
+>这里采用keepalived虚拟一个宿主机IP，用虚拟的宿主机IP访问相关服务
 ```bash
 cd docker/
 
@@ -69,11 +75,11 @@ cd docker/
 yum -y installl keepalived
 ```
 ##### keepalived.conf 配置文件设置
-- 这个配置文件需要注意以下几点
-  - 我的宿主机IP：192.168.1.15 宿主机使用的网卡名称：ens33
-  - 希望虚拟一个192.168.1.100 的IP对外提供服务，并把192.168.1.100 相关接口通信代理到172.101.0.100
+- 这个配置文件需要注意以下两点在配置文件中的相关设置
+- 宿主机 IP：192.168.1.15 宿主机使用的网卡名称：ens33
+- 虚拟宿主机 IP：192.168.1.100 对外提供服务，并把 192.168.1.100 相关端口的通信代理到 172.101.0.100
 ```bash
-cp keepalived.conf /etc/keepalived/keepalived.conf 配置文件设置
+cp keepalived.conf /etc/keepalived/keepalived.conf
 ```
 [点击此处查看在宿主机上的配置实例（注意修改文件名称为keepalived.conf）](./keepalived.conf)
 
