提交mysql数据库备份相关文档

--- a/Mysql/Mysql设计规范sql优化和读写部署/12.MYSQL数据库备份l.md
+++ b/Mysql/Mysql设计规范sql优化和读写部署/12.MYSQL数据库备份l.md
@@ -124,7 +124,7 @@ innobackupex --user=root --password=pwd --parallel=2 /home/db_backup/ --no-times
 /home/db_backup/ 指定备份到的目录
 --no-timestamp 生成时不指定时间戳生成的目录
 ```
-+ 第四部：利用innobackupex 进行全备的恢复
++ 第四步：利用innobackupex 进行全备的恢复
 ![sql执行计划](./images/12-12.png)
 >全备份后的目录: /home/db_backup/2019-04-02_10-30-30 , MYSQL使用中的数据库文件目录位置 : /mysql/data
 ```
@@ -142,41 +142,52 @@ chown -R mysql:mysql /mysql/data
 # mysql实例的启动
 /etc/init.c/mysqld start
 ```
-+ 第五步：利用innobackupex 进行增量备份
++ 第五步：利用 innobackupex 进行增量备份
 ```bash
-# innobackupex 备份工具
-# --incremental-basedir 参数：指定增量备份的基础备份目录
+# 全备 备份后的目录为 /home/db_backup/全备目录
+innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd --incremental /home/db_backup/ 
 
-# 全备 备份后的目录为 /home/db_backup/2019-04-02_10-30-30
-innobackupex --user=root --password=pwd --incremental /home/db_backup/  
-# 第一次增量备份 增量备份目录为 /home/db_backup/2019-04-02_12-30-30
-innobackupex --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/2019-04-02_10-30-30
-# 第二次增量备份 增量备份目录为 /home/db_backup/2019-04-02_14-30-30
-innobackupex --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/2019-04-02_12-30-30
+# 第一次增量备份 增量备份目录为 /home/db_backup/增备目录1
+innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/全备目录
+
+# 第二次增量备份 增量备份目录为 /home/db_backup/增备目录2
+innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/增备目录1
+
+
+# 参数详解：
+--incremental-basedir 参数：指定增量备份的基础备份目录
 ```
-+ 第六步： 利用innobackupex 进行增量备份的恢复
-![sql执行计划](./images/12-13.png)
+
+
++ 第六步：利用 innobackupex 进行全量和增量的数据恢复
 
 ```bash
-# 将第一次增量备份导入到全备目录中
-innobackupex --apply-log --redo-only /home/db_backup/2019-04-02_10-30-30 --incremental-dir /home/db_backup/2019-04-02_12-30-30
+# 步骤1：处理全量备份事务日志 
+innobackupex --apply-log --redo-only /home/db_backup/全备目录
 
-# 将第二次增量备份导入到全备目录中
-innobackupex --apply-log --redo-only /home/db_backup/2019-04-02_10-30-30 --incremental-dir /home/db_backup/2019-04-02_14-30-30
+# 步骤2：处理第一次增量备份事务并导入到全备目录中
+innobackupex --apply-log --redo-only /home/db_backup/全备目录 --incremental-dir /home/db_backup/增备目录1
+
+# 步骤3：处理第二次增量备份事务并导入到全备目录中
+innobackupex --apply-log --redo-only /home/db_backup/全备目录 --incremental-dir /home/db_backup/增备目录2
 
 # ........
 
-# 将所有的增量备份导入到全备中后，导入最新数据到全备目录中
-innobackupex --apply-log /home/db_backup/2019-04-02_10-30-30
+# 步骤4：停止PXC数据库集群，删除所有节点的现有数据库目录数据（或另存一份）
+mv /var/lib/mysql/* /var/lib/mysql_bak
 
-# mysql实例的停止
-/etc/init.c/mysqld stop
+# 步骤5：执行数据恢复（注意：当恢复的数据量特别大时，应该将备份数据在所有节点都执行数据恢复，数据量较小时可以只在主节点恢复然后从节点会自动同步的。）
+innobackupex --defaults-file=/etc/my.cnf --copy-back /home/db_backup/全备目录
 
-# 用备份目录替换数据库目录
-mv /mysql/data mv /mysql/data_bak
-mv /home/db_backup/2019-04-02_10-30-30 /mysql/data
-chown -R mysql:mysql /mysql/data
+# 步骤6：恢复mysql数据目录的权限
+chown -R mysql:mysql /var/lib/mysql
 
-# mysql实例的启动
-/etc/init.c/mysqld start
+# 步骤7：启动PXC数据库的主节点，然后依次启动从节点（从节点会自动同步主节点数据）
+主节点启动：systemctl start mysql@bootstrap.service
+从节点启动：/etc/init.c/mysqld start
+
+# 参数详解
+--apply-log 处理备份数据的事务日志
+--redo-only 在当前备份跳过未提交事务的回滚，防止后面增量数据有此事务的提交导致增量备份恢复时冲突而无法使用的问题
+
 ```
