--- a/Mysql/PXC集群部署/6.MyCat双切片存储配置和负载均衡.md
+++ b/Mysql/PXC集群部署/6.MyCat双切片存储配置和负载均衡.md
@@ -24,6 +24,8 @@ PXC集群2：172.18.0.5 172.18.0.6 172.18.0.7
 ```
 - 分别在两个集群中创建一个test数据库 和 一个t_user表
 ```sql
+CREATE DATABASE IF NOT EXISTS test default charset utf8 COLLATE utf8_general_ci;
+
 DROP TABLE IF EXISTS `t_user`;
 CREATE TABLE `t_user` (
 `id`  int(11) UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '主键ID' ,
