更新mysql备份与还原文档记录

--- a/Mysql/Mysql数据库备份与恢复/3.XtraBackup备份和还原.md
+++ b/Mysql/Mysql数据库备份与恢复/3.XtraBackup备份和还原.md
@@ -1,4 +1,4 @@
-# XtraBackup热备份
+# XtraBackup备份和还原
 
 ### 1. XtraBackup特点
 - 备份过程中会对数据加读锁，数据可读但是不可写
@@ -26,13 +26,14 @@ yum -y install percona-xtrabackup-24
 - 基本全量备份
 ```bash
 innobackupex --defaults-file=/etc/my.cnf \
---host=192.168.99.1 --user=admin --password=ABC123456 --port=3306 /home/backup
+--host=192.168.99.1 --user=admin --password=ABC123456 --port=3306 --parallel=2 /home/backup
+--parallel=2 指定备份是使用的线程数，并发备份 
 ```
 - 流式压缩备份的必要性（备份的同时直接压缩文件）
 ```bash
 innobackupex --defaults-file=/etc/my.cnf \
 --host=192.168.99.1 --user=admin --password=ABC123456 --port=3306 \
---no-timestamp --stream=xbstream -> /home/backup.xbstream
+--no-timestamp --stream=xbstream > /home/backup.xbstream
 
 # 参数详情
 --no-temestamp 不创建基于时间戳的目录（备份数据会被写到指定的文件中）
@@ -43,7 +44,7 @@ innobackupex --defaults-file=/etc/my.cnf \
 innobackupex --defaults-file=/etc/my.cnf \
 --host=192.168.99.1 --user=admin --password=ABC123456 --port=3306 \
 --encrypt=AES256 --encrypt-threads=10 --encrypt-key=ABC123456 --encrypt-chunk-size=512 \
---no-timestamp --stream=xbstream -> /home/backup.xbstream
+--no-timestamp --stream=xbstream > /home/backup.xbstream
 
 # 参数详情
 --encrypt 加密算法 推荐使用 AES256，不要使用非对称加密算法会导致时间过程
@@ -56,7 +57,7 @@ innobackupex --defaults-file=/etc/my.cnf \
 --host=192.168.99.1 --user=admin --password=ABC123456 --port=3306 \
 --encrypt=AES256 --encrypt-threads=10 --encrypt-key=ABC123456 --encrypt-chunk-size=512 \
 --compress --compress-threads=10 --include=test.t_user,trst.t_log \
---no-timestamp --stream=xbstream -> /home/backup.xbstream
+--no-timestamp --stream=xbstream > /home/backup.xbstream
 
 # 参数详情
 --encrypt 加密算法 推荐使用 AES256，不要使用非对称加密算法会导致时间过程
@@ -82,7 +83,7 @@ innobackupex --defaults-file=/etc/my.cnf \
 - 数据备份方案
 ```bash
 # 全备 备份后的目录为 /home/db_backup/全备目录
-innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd --incremental /home/db_backup/ 
+innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd /home/db_backup/ 
 
 # 第一次增量备份 增量备份目录为 /home/db_backup/增备目录1
 innobackupex --defaults-file=/etc/my.cnf --user=root --password=pwd --incremental /home/db_backup/ --incremental-basedir=/home/db_backup/全备目录
@@ -111,6 +112,9 @@ innobackupex --apply-log --redo-only /home/db_backup/全备目录 --incremental-
 
 # ........
 
+# 再次处理全量备份事务日志
+innobackupex --apply-log /home/db_backup/全备目录
+
 # 步骤4：停止PXC数据库集群，删除所有节点的现有数据库目录数据（或另存一份）
 mv /var/lib/mysql/* /var/lib/mysql_bak
 
@@ -126,7 +130,6 @@ chown -R mysql:mysql /var/lib/mysql
 
 # 参数详解
 --apply-log 处理备份数据的事务日志
---redo-only 在当前备份跳过未提交事务的回滚，防止后面增量数据有此事务的提交导致增量备份恢复时冲突而无法使用的问题
+--redo-only 在当前备份跳过未提交事务的回滚，防止后面增量数据有此事务的提交导致增量备份恢复时引起事务冲突，导致备份无法使用的问题
 
 ```
-
