--- a/Mysql/PXC集群部署/2.Centos安装PerconaServer数据库.md
+++ b/Mysql/PXC集群部署/2.Centos安装PerconaServer数据库.md
@@ -18,6 +18,9 @@ CentOS Linux release 7.6.1810 (Core)
   [jemalloc-3.6.0-1.el7.x86_64.rpm包 当前目录下载](./source/jemalloc-3.6.0-1.el7.x86_64.rpm)
   [Percona-Server-5.6.26-74.0-r32f8dfd-el7-x86_64-bundle.tar包 当前目录下载](./source/Percona-Server-5.6.26-74.0-r32f8dfd-el7-x86_64-bundle.tar)
 ```bash
+# Centos7 因为默认绑定了 mariadb-libs,所以要进行卸载
+yum -y remove maria*
+
 # 下载Percona-Server-5.6rpm包 并解压缩
 wget https://www.percona.com/downloads/Percona-Server-5.6/Percona-Server-5.6.26-74.0/binary/redhat/7/x86_64/Percona-Server-5.6.26-74.0-r32f8dfd-el7-x86_64-bundle.tar
 mkdir Percona-Server-rpm
