--- a/Mysql/PXC集群部署/3.组建PXC集群服务.md
+++ b/Mysql/PXC集群部署/3.组建PXC集群服务.md
@@ -41,7 +41,7 @@ cd PXC
 wget http://www.rpmfind.net/linux/opensuse/tumbleweed/repo/oss/x86_64/qpress-1.1-7.13.x86_64.rpm
 
 # 安装指定的rpm包
-yum localinstall ./*.rpm
+yum localinstall -y ./*.rpm
 ```
 
 ### 3. PXC安装成功后初始化
