--- a/Mysql/PXC集群部署/3.组建PXC集群服务.md
+++ b/Mysql/PXC集群部署/3.组建PXC集群服务.md
@@ -63,6 +63,7 @@ bind-address = 0.0.0.0
 skip-name-resolve
 ```
 
+
 ## 4 创建PXC集群
 ![Mysql](./images/3-11.png)
 ![Mysql](./images/3-10.png)
@@ -77,7 +78,7 @@ service mysql start
 ### 5. 验证是否成功开启mysql集群
 ```sql
 # 使用 mysql 客户端软件连接
-mysql > show status like ''wsrep_cluster%;
+mysql > show status like 'wsrep_cluster%';
 ```
 
 ![Mysql](./images/3-12.png)
