PXC节点状态说明

--- a/Mysql/PXC集群部署/4.PXC集群常用的状态管理.md
+++ b/Mysql/PXC集群部署/4.PXC集群常用的状态管理.md
@@ -51,6 +51,25 @@ mysql > show status like '%queue%';
  - JOINED  节点数据同步成功
  - DONER   节点与其他节点进行全量同步，此时数据库进入流控，不能对外提供服务
  - SYNCED  同步状态：可以对外提供读写服务
+ ```bash
+ PXC节点的各种状态
+open 节点启动成功，准备加入集群
+
+primary 节点已经在集群中，且可以对外提供服务，新节点加入时，可以被选择为donor节点传输数据
+
+joiner 节点处于等待接收同步文件的状态
+
+jonied 节点完成数据同步，尝试保持和集群一致的状态
+
+synced 节点正常提供服务，表使已经完成同步，并和集群一致
+
+donor 节点处于提供全量数据的状态
+--------------------- 
+作者：南极月光 
+来源：CSDN 
+原文：https://blog.csdn.net/u010311722/article/details/84992170 
+版权声明：本文为博主原创文章，转载请附上博文链接！
+ ```
 ![Mysql](./images/4-9.png)
 
  ### 5. PXC集群状态说明
