--- a/Docker/10.Docker私有仓库搭建.md
+++ b/Docker/10.Docker私有仓库搭建.md
@@ -89,6 +89,20 @@ ports:
 
 Now you should be able to visit the admin portal at http://dockerhub.xxx.com:8080. 
 For more details, please visit https://github.com/goharbor/harbor .
+
+
+-------------------------- 常用操作 -----------------------------------------------------
+
+#停止：
+docker-compose -f docker-compose.yml stop
+
+#启动：
+docker-compose -f docker-compose.yml start
+
+#如果修改了配置文件，执行如下步骤：
+docker-compose down
+vim harbor.cfg
+./install.sh
 ```
 [点击查看docker-compose.yml配置文件示例](./source/docker-compose.yml) | [点击查看harbor.cfg配置文件示例](./source/harbor.cfg)
 > 注意：安装时要使用很多系统目录挂载，如果希望指定目录挂载的位置可以通过修改配置文件实现。具体可以查看上面的配置文件示例。（MAC系统的电脑因为有目录权限限制，因此要先去修改指定的挂载目录位置）
