--- a/Php/4.PHP自定义函数和内部函数基础.md
+++ b/Php/4.PHP自定义函数和内部函数基础.md
@@ -15,3 +15,13 @@ return 返回值关键字
 没有return是为null，不可以返回多个值
 
 多个值可以定义在数组中返回
+
+### 3. include require
+include 结构会发出警告，这一点和require不同，后者会发出致命错误
+include_once require_once 进程文件是否包含，已经包含的话不会再次包含
+
+### 4. 系统内置函数
+date() strrotime() mktime() time() microtime() date_default_timezone_set() 时间函数
+ip2long() IP转长整型字符 long2ip() 地址格式长地址转IP
+print() printf()根据格式进行输出 print_r()格式化打印 echo spintf()不输出 var_dump()打印时显示类型 var_export()符合PHP语法结构
+字符，数组处理函数
