PHP7新特性 算法基础

--- a/Php/10.算法基础.md
+++ b/Php/10.算法基础.md
@@ -18,14 +18,14 @@ function bubble_sort($array){
 }
  
  function sum_num(){
-   var arr = [1,1]
-   for(var i=3,i<=30,i++){
-     var total = count(arr);
-     var curren = arr[total-2] + arr[total-1];
-     array_push(arr,curren);
-     var res = end(arr);
+   var $arr = [1,1]
+   for(var $i=3,$i<=30,$i++){
+     var $total = count($arr);
+     var $curren = $arr[$total-2] + $arr[$total-1];
+     array_push($arr,$curren);
+     var $res = end($arr);
    }
-   return res;
+   return $res;
  }
 
 //快速排序（数组排序）
