--- a/ElasticSearch/基础使用.md
+++ b/ElasticSearch/基础使用.md
@@ -4,8 +4,9 @@
 
 ### 1. query 查询
 - 一般用于模糊匹配查询,范围查询
+#### 模糊匹配：查询用户名 xiaoming是班长 的数据；会把 小明 班长 两个关键词有关的进行分割后进行匹配数据
 ```json
-// 模糊匹配：查询用户名 xiaoming是班长 的数据；会把 小明 班长 两个关键词有关的进行分割后进行匹配数据
+
 {
   "query":{
     "match":{
@@ -13,8 +14,10 @@
     }
   }
 }
+```
+#### 精准匹配：只匹配完整包含 xiaoming是班长 的数据
+```json
 
-// 精准匹配：只匹配完整包含 xiaoming是班长 的数据
 {
   "query":{
     "match_phrase":{
@@ -22,28 +25,34 @@
     }
   }
 }
+```
+#### 多字段匹配：查询 name，content 字段同时包含有 班长 关键字的数据
+```json
 
-// 多字段匹配：查询 name，content 字段同时包含有 班长 关键字的数据
 {
   "query":{
     "multi_match":{
       "query":"班长",
-      "fields":["name","content"],
+      "fields":["name","content"]
 
     }
   }
 }
-// 语法查询，可以使用通配符，语法关键字等，例如下面的多个关键词的多字段查询
+```
+#### 语法查询，可以使用通配符，语法关键字等，例如下面的多个关键词的多字段查询
+
+```json
 {
   "query":{
     "query_string":{
-      "query":"(我不是 班长) OR pychon"
-      "fields":["name","content"],
+      "query":"(我不是 班长) OR pychon",
+      "fields":["name","content"]
     }
   }
 }
-
-// 指定字段查询:字段name是xiaoming个字的数据
+```
+#### 指定字段查询:字段name是xiaoming个字的数据
+```json
 {
   "query":{
     "term":{
@@ -53,16 +62,17 @@
 }
 ```
 
-### 2. filter 查询
+### 2. "filter" 查询
 - 只用于数据过滤，只存在bool真假，不能用于范围查询
-- filter会做数据缓存，相对于query来说要更快一点
-```json
-// 查询字段 age 年龄 21 的数据
+- "filter"会做数据缓存，相对于query来说要更快一点
+
+#### 查询字段 age 年龄 21 的数据
+```
 {
   "query":{
-    'bool':{
-      filter:{
-        'age':21
+    "bool":{
+      "filter":{
+        "age":21
       }
     }
   }
@@ -71,12 +81,13 @@
 
 ### 3. 复合查询
 **全文检索查询地址 POST`http://ip:9200/_search`**
+
+#### 会在返回结果中给出 _socre 查询分数
 ```json
-// 会在返回结果中给出 _socre 查询分数
 {
   "query":{
-    'constant_score':{
-      filter:{
+    "constant_score":{
+      "filter":{
         "match":{
           "title":"elastic"
         }
@@ -84,12 +95,13 @@
     }
   }
 }
-
-// 按照指定的 分数查询数据 boost : 2 固定分数查询 
+```
+#### 按照指定的 分数查询数据 boost : 2 固定分数查询 
+```json
 {
   "query":{
-    'constant_score':{
-      filter:{
+    "constant_score":{
+      "filter":{
         "match":{
           "title":"elastic"
         }
@@ -98,12 +110,13 @@
     }
   }
 }
-
-// bool 查询
-{
+```
+#### bool 查询 应当满足下面的条件,只要满足其中之一就可以
+```json
+  {
   "query":{
-    'bool':{
-      "should":[ //应当满足下面的条件,只要满足其中之一就可以
+    "bool":{
+      "should":[
           {
             "match":{
               "author":"xiaoming"
@@ -117,12 +130,13 @@
       }
     }
   }
-}
-// bool 查询
-{
+```
+#### bool 查询 必须满足下面的条件,两个条件都满足才可以
+```json
+  {
   "query":{
-    'bool':{
-      "must":[ //必须满足下面的条件,两个条件都满足才可以
+    "bool":{
+      "must":[ 
           {
             "match":{
               "author":"xiaoming"
@@ -136,12 +150,13 @@
       }
     }
   }
-}
-
+```
+#### bool 查询  一定不满足下面的条件
+```json
 {
   "query":{
-    'bool':{
-      "must_not":[ //一定不满足下面的条件
+    "bool":{
+      "must_not":[
           {
             "match":{
               "author":"xiaoming"
@@ -154,6 +169,5 @@
         ]
       }
     }
-  }
 }
 ```
